wow structure is created for this project

--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Quiz App</title>
   </head>
   <body>
-    <h1>Welcome to Brand New Quiz App!</h1>
+    <div class="quiz-section">
+      <div class="quiz">
+        <h2 class="question" id="question">quiz question</h2>
+        <hr />
+        <ul>
+          <li>
+            <label for="a" id="option_1">quiz Option</label>
+            <input type="radio" name="answer" class="answer" id="a" />
+          </li>
+          <li>
+            <input type="radio" name="answer" class="answer" id="a" />
+            <label for="a" id="option_1">quiz Option</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" class="answer" id="a" />
+            <label for="a" id="option_1">quiz Option</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" class="answer" id="a" />
+            <label for="a" id="option_1">quiz Option</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" class="answer" id="a" />
+            <label for="a" id="option_1">quiz Option</label>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
