wow finally structure is completed

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
         <hr />
         <ul>
           <li>
-            <label for="a" id="option_1">quiz Option</label>
-            <input type="radio" name="answer" class="answer" id="a" />
-          </li>
-          <li>
             <input type="radio" name="answer" class="answer" id="a" />
             <label for="a" id="option_1">quiz Option</label>
           </li>
@@ -32,6 +28,10 @@
             <label for="a" id="option_1">quiz Option</label>
           </li>
         </ul>
+        <hr />
+        <div class="btn">
+          <button type="submit" id="submit">Submit</button>
+        </div>
       </div>
     </div>
   </body>
