--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             <label for="a" id="option_1">quiz Option</label>
           </li>
           <li>
-            <input type="radio" name="answer" class="answer" id="a" />
-            <label for="a" id="option_1">quiz Option</label>
+            <input type="radio" name="answer" class="answer" id="b" />
+            <label for="b" id="option_2">quiz Option</label>
           </li>
           <li>
-            <input type="radio" name="answer" class="answer" id="a" />
-            <label for="a" id="option_1">quiz Option</label>
+            <input type="radio" name="answer" class="answer" id="c" />
+            <label for="c" id="option_3">quiz Option</label>
           </li>
           <li>
-            <input type="radio" name="answer" class="answer" id="a" />
-            <label for="a" id="option_1">quiz Option</label>
+            <input type="radio" name="answer" class="answer" id="d" />
+            <label for="d" id="option_4">quiz Option</label>
           </li>
         </ul>
         <hr />
