--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="quiz-section">
-      <div class="quiz">
+      <div id="quiz">
         <h2 class="question" id="question">quiz question</h2>
         <hr />
         <ul>
